# swine-z3

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile
.github/workflows/: build-all.yml  build-linux-static.yml  build-linux.yml  build-osx.yml  build-swine-osx.yml  build-swine-static.yml  build-swine-windows.yml  build-swine.yml  build-windows.yml
QtProject/: QtCreator.db  QtCreator.ini
QtProject/qtcreator/: cmaketools.xml  debuggers.xml  default.qws  devices.xml  helpcollection.qhc  profiles.xml  toolchains.xml
QtProject/qtcreator/qnx/: qnxconfigurations.xml
bundle.template/: starexec_run_swine_partial_cvc5  starexec_run_swine_partial_z3  starexec_run_swine_total_cvc5  starexec_run_swine_total_cvc5_no_bounding  starexec_run_swine_total_cvc5_no_interpolation  starexec_run_swine_total_cvc5_no_modulo  starexec_run_swine_total_cvc5_no_monotonicity  starexec_run_swine_total_cvc5_no_rewriting  starexec_run_swine_total_cvc5_no_symmetry  starexec_run_swine_total_cvc5_nothing  starexec_run_swine_total_z3  starexec_run_swine_total_z3_no_bounding  starexec_run_swine_total_z3_no_interpolation  starexec_run_swine_total_z3_no_modulo  starexec_run_swine_total_z3_no_monotonicity  starexec_run_swine_total_z3_no_rewriting  starexec_run_swine_total_z3_no_symmetry  starexec_run_swine_total_z3_nothing  starexec_run_swine_z3
docker/: Dockerfile  build.Dockerfile  docker-compose.build.yml  docker-compose.yml  qtcreator.Dockerfile  rwth.Dockerfile  z3.Dockerfile
examples/: ex0.smt2  ex1.smt2  ex10.smt2  ex11.smt2  ex12.smt2  ex13.smt2  ex14.smt2  ex2.smt2  ex3.smt2  ex4.smt2  ex5.smt2  ex7.smt2  ex8.smt2  ex9.smt2  purrs01.smt2  purrs02.smt2  purrs03.smt2  purrs04.smt2  purrs05.smt2  purrs06.smt2  purrs07.smt2  purrs08.smt2  purrs09.smt2  purrs10.smt2  purrs11.smt2  purrs12.smt2  purrs13.smt2  purrs14.smt2  purrs15.smt2  purrs16.smt2  purrs17.smt2  purrs18.smt2  purrs19.smt2  purrs20.smt2  purrs21.smt2  purrs22.smt2  purrs23.smt2  purrs24.smt2  purrs25.smt2  purrs26.smt2  (+12 more)
examples_quantified/: purrs01.smt2  purrs02.smt2  purrs03.smt2  purrs04.smt2  purrs05.smt2  purrs06.smt2  purrs07.smt2  purrs08.smt2  purrs09.smt2  purrs10.smt2  purrs11.smt2  purrs12.smt2  purrs13.smt2  purrs14.smt2  purrs15.smt2  purrs16.smt2  purrs17.smt2  purrs18.smt2  purrs19.smt2  purrs20.smt2  purrs21.smt2  purrs22.smt2  purrs23.smt2  purrs24.smt2  purrs25.smt2  purrs26.smt2  purrs27.smt2  purrs28.smt2  purrs29.smt2  purrs30.smt2  purrs31.smt2  purrs32.smt2  purrs33.smt2  purrs34.smt2  purrs35.smt2  purrs36.smt2  purrs37.smt2  purrs38.smt2
include/: brute_force.h  config.h  constant_propagator.h  exp_finder.h  lemma_kind.h  preprocessor.h  rewriter.h  swine.h  term_evaluator.h  util.h  version.h
scripts/: build-container.sh  build.sh  bundle.sh  configure_and_build.sh  extract_z3.sh  run_all.sh
src/: brute_force.cpp  config.cpp  constant_propagator.cpp  exp_finder.cpp  lemma_kind.cpp  main.cpp  preproc_kind.cpp  preprocessor.cpp  rewriter.cpp  swine.cpp  term_evaluator.cpp  util.cpp  version.cpp  version.cpp.in
